[metadata]
name = techops-cli
version = 0.2.0
description = TechOps CLI for setup & troubleshooting
author = Leonardo Campos
author_email = campos.silvaleonardo@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/cli
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    click
    InquirerPy
    cloud-tools

[options.entry_points]
console_scripts =
    techops=cli.cli:main

